Change: Folder Name

--- a/example.html
+++ b/example.html
@@ -85,12 +85,12 @@
         <h2 class="ko">사용법</h2>
         <h2 class="en">Usage</h2>
         <h4>HTML</h4>
-        <img src="./img/example-html.png"  alt=""/>
+        <img src="./image/example-html.png"  alt=""/>
         <h4>CSS</h4>
-        <img src="./img/example-css.png"  alt=""/>
+        <img src="./image/example-css.png"  alt=""/>
         <h4>JS</h4>
         <h5>1.</h5>
-        <img src="img/example-js-1.png" alt=""/>
+        <img src="image/example-js-1.png" alt=""/>
         <h5 class="ko">
             혹은
         </h5>
@@ -98,7 +98,7 @@
             OR
         </h5>
         <h5>2.</h5>
-        <img src="img/example-js-2.png" alt=""/>
+        <img src="image/example-js-2.png" alt=""/>
         <script type="text/javascript" src="./MultiLanguage.js"></script>
         <h2 class="ko">링크</h2>
         <h2 class="en">Link</h2>
