--- a/example.html
+++ b/example.html
@@ -85,7 +85,8 @@
         <h2 class="ko">사용법</h2>
         <h2 class="en">Usage</h2>
         <h4>HTML</h4>
-        <img src="./image/example-html.png"  alt=""/>
+        <img src="./image/example-html.png"  alt=""/> <br>
+        <img src="./image/example-select.png"  alt=""/>
         <h4>CSS</h4>
         <img src="./image/example-css.png"  alt=""/>
         <h4>JS</h4>
