Change: English 설명

--- a/example.html
+++ b/example.html
@@ -68,16 +68,16 @@
             </ul>
         </div>
         <div class="en">
-            There may already be various multilingual support methods, but the advantages of this project compared to the many existing methods are as follows.<br>
+            There are a lot of approaches to internationalisation, but this project offers unique advantages like: followings.
             <ul>
                 <li>
-                    In HTML, you can write a translation where the text appears.
+                    Inline translation in HTML documents
                 </li>
                 <li>
-                    Simple JS file implemented in 45 lines
+                    Lightweight JavaScript implementation in 45 lines
                 </li>
                 <li>
-                    Only HTML, CSS, and JS are used, so even beginners can use it easily.
+                    Written in pure HTML/CSS/JS so beginners can use it easily
                 </li>
             </ul>
         </div>
