Change: Select문 쓸모없는 코드 제외

--- a/example.html
+++ b/example.html
@@ -35,11 +35,11 @@
         <span class="en">
             Language:
         </span>
-        <select name="language" id="change-language">
-            <option value="ko" selected="selected" lang="ko">
+        <select id="change-language">
+            <option value="ko" selected="selected">
                 Korean
             </option>
-            <option value="en" lang="en">
+            <option value="en">
                 English
             </option>
         </select> <br>
