Change: multilanguage.js Uppercase -> Lowercase

--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MultiLanguage.js</title>
+    <title>multilanguage.js</title>
     <style>
         img {
             width: 500px;
@@ -13,15 +13,16 @@
 <body>
     <div style="width: 70%; margin: 50px auto 200px auto;">
         <h1>
-            MultiLanguage.js <br>
+            multilanguage.js <br>
 
         </h1>
-        <h2 class="ko">
+        <h4 class="ko">
                 바닐라 JS로 하는 간단한 다국어 지원
-        </h2>
+        </h4>
         <h2 class="en">
                 Simple Multi Language with Vanilla Javascript
         </h2>
+
         <span class="ko">
             작성자: 신 현
         </span>
@@ -71,7 +72,7 @@
                     Inline translation in HTML documents
                 </li>
                 <li>
-                    Lightweight JavaScript implementation in 48 lines
+                    Lightweight JS implementation in 48 lines
                 </li>
                 <li>
                     Written in pure HTML/CSS/JS so beginners can use it easily
@@ -85,22 +86,16 @@
         <img src="./image/example-html.png"  alt=""/> <br>
         <img src="./image/example-select.png"  alt=""/>
         <h4>JS</h4>
-        <h5>1.</h5>
-        <img src="image/example-js-1.png" alt=""/>
-        <h5 class="ko">
-            혹은
-        </h5>
-        <h5 class="en">
-            OR
-        </h5>
-        <h5>2.</h5>
-        <img src="image/example-js-2.png" alt=""/>
+        <span class="ko">multilanguage.js를 다운로드하고 아래 코드를 작성한다.</span>
+        <span class="en">Download multilanguage.js and write this code. </span>
+        <br>
+        <img src="image/example-js.png" alt=""/>
         <h2 class="ko">링크</h2>
         <h2 class="en">Link</h2>
-        <a href="https://github.com/kyaryunha/MultiLanguage.js" target="_blank" style="text-decoration: none; color: deepskyblue; font-weight: bold" >
-            https://github.com/kyaryunha/MultiLanguage.js
+        <a href="https://github.com/kyaryunha/multilanguage.js" target="_blank" style="text-decoration: none; color: deepskyblue; font-weight: bold" >
+            https://github.com/kyaryunha/multilanguage.js
         </a>
-        <script type="text/javascript" src="./MultiLanguage.js"></script>
+        <script type="text/javascript" src="./multilanguage.js"></script>
     </div>
 </body>
 </html>
