Change: 폴더 구조 변경: example folder 생성

--- a/example/example.html
+++ b/example/example.html
@@ -95,7 +95,7 @@
         <a href="https://github.com/kyaryunha/multilanguage.js" target="_blank" style="text-decoration: none; color: deepskyblue; font-weight: bold" >
             https://github.com/kyaryunha/multilanguage.js
         </a>
-        <script type="text/javascript" src="./multilanguage.js"></script>
+        <script type="text/javascript" src=".././/multilanguage.js"></script>
     </div>
 </body>
 </html>
