npm 등록: i18n-multilanguage

--- a/example/example.html
+++ b/example/example.html
@@ -14,7 +14,6 @@
     <div style="width: 70%; margin: 50px auto 200px auto;">
         <h1>
             multilanguage.js <br>
-
         </h1>
         <h4 class="ko">
                 바닐라 JS로 하는 간단한 다국어 지원
@@ -86,16 +85,24 @@
         <img src="./image/example-html.png"  alt=""/> <br>
         <img src="./image/example-select.png"  alt=""/>
         <h4>JS</h4>
+
         <span class="ko">multilanguage.js를 다운로드하고 아래 코드를 작성한다.</span>
         <span class="en">Download multilanguage.js and write this code. </span>
         <br>
         <img src="image/example-js.png" alt=""/>
+        <br>
+        <span class="ko">다운로드하지 않고 링크로 사용하는 방법은 다음과 같다.</span>
+        <span class="en">If you want use just link,</span>
+        <br>
+        <img src="image/example-js-2.png" alt=""/>
+
+
         <h2 class="ko">링크</h2>
         <h2 class="en">Link</h2>
         <a href="https://github.com/kyaryunha/multilanguage.js" target="_blank" style="text-decoration: none; color: deepskyblue; font-weight: bold" >
             https://github.com/kyaryunha/multilanguage.js
         </a>
-        <script type="text/javascript" src=".././/multilanguage.js"></script>
+        <script type="text/javascript" src="https://unpkg.com/i18n-multilanguage@1.0.0/multilanguage.js"></script>
     </div>
 </body>
 </html>
