--- a/example/example.html
+++ b/example/example.html
@@ -153,7 +153,7 @@
             https://github.com/kyaryunha/i18n-language.js
         </a>
 <!--        <script type="text/javascript" src=".././i18n-language.js"></script>-->
-        <script type="text/javascript" src="https://unpkg.com/i18n-language@1.0.3/i18n-language.js"></script>
+        <script type="text/javascript" src="https://unpkg.com/i18n-language@latest/i18n-language.js"></script>
     </div>
 </body>
 </html>
