fix typo about minified

--- a/example/index.html
+++ b/example/index.html
@@ -172,7 +172,7 @@
         <span data-lang="en">or minified version is</span>
         <span data-lang="jp">あるいは minified version は次の通りである。</span>
         <br>
-        <pre><code>&lt;script type="text/javascript" src="https://cdn.jsdelivr.net/npm/i18n-language@1.0.8/i18n-language.js"&gt;&lt;/script&gt;</code></pre>
+        <pre><code>&lt;script type="text/javascript" src="https://cdn.jsdelivr.net/npm/i18n-language@1.0.8/i18n-language.min.js"&gt;&lt;/script&gt;</code></pre>
 
         <h2 data-lang="ko">링크</h2>
         <h2 data-lang="en">Link</h2>
